Join outputs for complex expressions